@@ -20,6 +20,7 @@ class reload_generic : object
     (* Can be overridden to reflect instructions that can operate
        directly on stack locations *)
   method makereg : Reg.t -> Reg.t
+  method makeregs : Reg.t array -> Reg.t array
     (* Can be overridden to avoid creating new registers of some class
        (i.e. if all "registers" of that class are actually on stack) *)
   method fundecl : Mach.fundecl -> int array -> Mach.fundecl * bool
