@@ -281,6 +281,11 @@ Working version
 - #11776: Extend environment with functor parameters in `strengthen_lazy`.
   (Chris Casinghino and Luke Maurer, review by Gabriel Scherer)
 
+- #11803, #11808: on x86, the destination of an integer comparison must be
+  a register, it cannot be a stack slot.
+  (Vincent Laviron, review by Xavier Leroy, report by
+   Emilio Jesús Gallego Arias)
+
 - #11809: Protect Parmatch.pats_of_type from missing cmis
   (Jacques Garrigue, review by Stephen Dolan and Gabriel Scherer)
 
